--- a/TensorFlow Fundamental/part2.ipynb
+++ b/TensorFlow Fundamental/part2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "8b9d58f1",
    "metadata": {},
    "outputs": [],
@@ -22,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "9ede5da3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-08 07:35:45.853952: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+     ]
+    }
+   ],
    "source": [
     "#creating tf.constant(unchangable) and tf.Variable(changable)\n",
     "changable_tensor=tf.Variable([2,5,6])\n",
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "4e78ab5c",
    "metadata": {},
    "outputs": [
@@ -44,7 +52,7 @@
        "<tf.Variable 'Variable:0' shape=(3,) dtype=int32, numpy=array([2, 5, 6], dtype=int32)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "ea69ee65",
    "metadata": {},
    "outputs": [
@@ -66,7 +74,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#lets try to change one of the elements of the changable of tensor\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mchangable_tensor\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m=[\u001b[32m3\u001b[39m]\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#lets try to change one of the elements of the changable of tensor\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mchangable_tensor\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m=[\u001b[32m3\u001b[39m]\n",
       "\u001b[31mTypeError\u001b[39m: 'ResourceVariable' object does not support item assignment"
      ]
     }
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f8b45bc9",
    "metadata": {},
    "outputs": [
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "64a2424e",
    "metadata": {},
    "outputs": [
@@ -131,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "b024a2d5",
    "metadata": {},
    "outputs": [
@@ -140,9 +148,9 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[ 0.7338968  -2.5268064 ]\n",
-      " [-0.88726497 -1.6417441 ]\n",
-      " [-1.3342372   0.01255416]], shape=(3, 2), dtype=float32)\n"
+      "[[ 1.2585617  -1.4151684 ]\n",
+      " [ 0.5874982  -0.57268715]\n",
+      " [ 0.8059718   0.33799234]], shape=(3, 2), dtype=float32)\n"
      ]
     }
    ],
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "cd4c80e6",
    "metadata": {},
    "outputs": [
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "483aeda8",
    "metadata": {},
    "outputs": [
@@ -232,8 +240,8 @@
       "shuffled of matrix is :\n",
       "tf.Tensor(\n",
       "[[9 0 3]\n",
-      " [3 5 6]\n",
       " [2 1 2]\n",
+      " [3 5 6]\n",
       " [3 5 6]], shape=(4, 3), dtype=int32)\n"
      ]
     }
@@ -244,6 +252,248 @@
     "print(random_3)\n",
     "print('shuffled of matrix is :')\n",
     "print(tf.random.shuffle(random_3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94babdb6",
+   "metadata": {},
+   "source": [
+    "# Types of seeds in TensorFlow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44ff77b5",
+   "metadata": {},
+   "source": [
+    "##### 1.If neither the global seed nor the operation seed is set, we get different results for every call to the random op and every re-run of the program:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "d9096f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.39475608], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([0.50503516], shape=(1,), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(tf.random.uniform([1]))  # generates 'A1'\n",
+    "print(tf.random.uniform([1]))  # generates 'A2'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff397180",
+   "metadata": {},
+   "source": [
+    "#### 2.If the global seed is set but the operation seed is not set, we get different results for every call to the random op, but the same sequence for every re-run of the program:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "0688bf56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.5380393], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([0.3253647], shape=(1,), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(1234)\n",
+    "print(tf.random.uniform([1]))  # generates 'A1'\n",
+    "print(tf.random.uniform([1]))  # generates 'A2'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebced0c9",
+   "metadata": {},
+   "source": [
+    "#### 3.The reason we get 'A2' instead 'A1' on the second call of tf.random.uniform is because the second call uses a different operation seed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "f3c8236e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.5380393], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([0.3253647], shape=(1,), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.random.uniform([1]))  # generates 'A1'\n",
+    "print(tf.random.uniform([1]))  # generates 'A2'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5bdba1c",
+   "metadata": {},
+   "source": [
+    "#### 4.Note that `tf.function` acts like a re-run of a program in this case. When the global seed is set but operation seeds are not set, the sequence of random numbers are the same for each `tf.function`. For example:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "d6f67cb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.13047123], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.1689806], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.13047123], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.1689806], dtype=float32)>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(1234)\n",
+    "\n",
+    "@tf.function\n",
+    "def f():\n",
+    "  a = tf.random.uniform([1])\n",
+    "  b = tf.random.uniform([1])\n",
+    "  return a, b\n",
+    "\n",
+    "@tf.function\n",
+    "def g():\n",
+    "  a = tf.random.uniform([1])\n",
+    "  b = tf.random.uniform([1])\n",
+    "  return a, b\n",
+    "\n",
+    "print(f())  # prints '(A1, A2)'\n",
+    "print(g())  # prints '(A1, A2)'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5bb8508",
+   "metadata": {},
+   "source": [
+    "#### 5.If the operation seed is set, we get different results for every call to the random op, but the same sequence for every re-run of the program:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "fdf27e86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.1510979], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([0.3737167], shape=(1,), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.random.uniform([1], seed=1))  # generates 'A1'\n",
+    "print(tf.random.uniform([1], seed=4))  # generates 'A2'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a7e7a6c",
+   "metadata": {},
+   "source": [
+    "#### 6.Calling tf.random.set_seed will reset any such counters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "318684b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.1689806], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([0.7539084], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([0.1689806], shape=(1,), dtype=float32)\n",
+      "tf.Tensor([0.7539084], shape=(1,), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(1234)\n",
+    "print(tf.random.uniform([1], seed=1))  # generates 'A1'\n",
+    "print(tf.random.uniform([1], seed=1))  # generates 'A2'\n",
+    "tf.random.set_seed(1234)\n",
+    "print(tf.random.uniform([1], seed=1))  # generates 'A1'\n",
+    "print(tf.random.uniform([1], seed=1))  # generates 'A2'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "573b4560",
+   "metadata": {},
+   "source": [
+    "#### 7.The second call of foo returns '(A2, A2)' instead of '(A1, A1)' because tf.random.uniform maintains an internal counter. If you want foo to return '(A1, A1)' every time, use the stateless random ops such as tf.random.stateless_uniform. Also see tf.random.experimental.Generator for a new set of stateful random ops that use external variables to manage their states.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "4a4a3246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.1689806], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.1689806], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.7539084], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.7539084], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.13047123], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.1689806], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.6087816], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.7539084], dtype=float32)>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@tf.function\n",
+    "def foo():\n",
+    "  a = tf.random.uniform([1], seed=1)\n",
+    "  b = tf.random.uniform([1], seed=1)\n",
+    "  return a, b\n",
+    "print(foo())  # prints '(A1, A1)'\n",
+    "print(foo())  # prints '(A2, A2)'\n",
+    "\n",
+    "@tf.function\n",
+    "def bar():\n",
+    "  a = tf.random.uniform([1])\n",
+    "  b = tf.random.uniform([1])\n",
+    "  return a, b\n",
+    "print(bar())  # prints '(A1, A2)'\n",
+    "print(bar())  # prints '(A3, A4)'"
    ]
   }
  ],
