--- a/CNN/malaria_detection.ipynb
+++ b/CNN/malaria_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPZ8ewQS2fXt8ykl/QKCOBT",
+      "authorship_tag": "ABX9TyNIN0wCynglFlWViOyinoym",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,7 +276,7 @@
     {
       "cell_type": "code",
       "source": [
-        "history=model.fit(train_data,epochs=10,validation_data=val_data)"
+        "history=model.fit(train_data,epochs=5,validation_data=val_data)"
       ],
       "metadata": {
         "id": "HxG_A5erPY89"
@@ -300,10 +300,247 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# model evaluation and prediction"
+      ],
+      "metadata": {
+        "id": "xE60nRyn_hHb"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#model evaluation\n",
+        "model.evaluate(test_data)\n"
+      ],
       "metadata": {
         "id": "hXg-xE_nVBbd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#model prediction\n",
+        "model.predict(test_data.take(1))[0][0]"
+      ],
+      "metadata": {
+        "id": "TLeY_AYJ_oPV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def parasite_or_not(x):\n",
+        "  if x<0.5:\n",
+        "    return str('P')\n",
+        "  else:\n",
+        "    return str('U')"
+      ],
+      "metadata": {
+        "id": "CdUhMAGx_6mh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "parasite_or_not(model.predict(test_data.take(1))[0][0])"
+      ],
+      "metadata": {
+        "id": "GDw-Lz8wBGDd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i,(image,label) in enumerate(test_data.take(25)):\n",
+        "  plt.subplot(5,5,i+1)\n",
+        "  plt.imshow(image[0])\n",
+        "  plt.title(str(parasite_or_not(label.numpy()[0]))+ ':' + str (parasite_or_not(model.predict(image)[0][0])))\n",
+        "  plt.axis('off')"
+      ],
+      "metadata": {
+        "id": "FhOS2KX6BUw_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Create functional api"
+      ],
+      "metadata": {
+        "id": "ciOFi0K5B4qO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.layers import *"
+      ],
+      "metadata": {
+        "id": "VA2Z0rDFB31l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "funct_input=Input(shape=(224,224,3))\n",
+        "x=Conv2D(6,kernel_size=(3,3),strides=(1,1),padding='valid',activation='relu',)(funct_input)\n",
+        "x=BatchNormalization()(x)\n",
+        "x=MaxPooling2D(pool_size=(2,2),strides=(2,2))(x)\n",
+        "\n",
+        "x=Conv2D(16,kernel_size=(3,3),strides=(1,1),padding='valid',activation='relu',)(funct_input)\n",
+        "x=BatchNormalization()(x)\n",
+        "x=MaxPooling2D(pool_size=(2,2),strides=(2,2))(x)\n",
+        "\n",
+        "x=Flatten()(x)\n",
+        "\n",
+        "x=Dense(100,activation='relu')(x)\n",
+        "x=BatchNormalization()(x)\n",
+        "x=Dense(100,activation='relu')(x)\n",
+        "x=BatchNormalization()(x)\n",
+        "output=Dense(1,activation='sigmoid')(x)\n"
+      ],
+      "metadata": {
+        "id": "WUhtvTLaDMZE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_function_api=Model(inputs=funct_input,outputs=[output])"
+      ],
+      "metadata": {
+        "id": "y6nHiEspHGYz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_function_api.summary()"
+      ],
+      "metadata": {
+        "id": "88wwb9kZHSlV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#compile the model\n",
+        "optimizer=tf.keras.optimizers.Adam(learning_rate=0.001)\n",
+        "loss=tf.keras.losses.BinaryCrossentropy()\n",
+        "metrics=['accuracy']\n",
+        "model_function_api.compile(optimizer=optimizer,loss=loss,metrics=metrics)"
+      ],
+      "metadata": {
+        "id": "97fxHEDSHTyJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history_function_api=model_function_api.fit(train_data,epochs=5,validation_data=val_data)"
+      ],
+      "metadata": {
+        "id": "QZyKSaEAH_Ng"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "pd.DataFrame(history_function_api.history).plot()\n",
+        "plt.xlabel('no of epochs')\n",
+        "plt.ylabel('accuracy')\n",
+        "plt.title('train and validation data curve')"
+      ],
+      "metadata": {
+        "id": "AoUf2nbJIKpr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Model evaluatin and prediction"
+      ],
+      "metadata": {
+        "id": "dLb9TeCLIXBi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_function_api.evaluate(test_data)"
+      ],
+      "metadata": {
+        "id": "kBE5vZTEIWOB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#model prediction\n",
+        "model.predict(test_data.take(1))[0][0]"
+      ],
+      "metadata": {
+        "id": "f1nbzlnzIoqO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def parasite_or_not(x):\n",
+        "  if x<0.5:\n",
+        "    return str('P')\n",
+        "  else:\n",
+        "    return str('U')"
+      ],
+      "metadata": {
+        "id": "1up8llNgIuKJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i,(image,label) in enumerate(test_data.take(25)):\n",
+        "  plt.subplot(5,5,i+1)\n",
+        "  plt.imshow(image[0])\n",
+        "  plt.title(str(parasite_or_not(label.numpy()[0]))+ ':' + str (parasite_or_not(model.predict(image)[0][0])))\n",
+        "  plt.axis('off')"
+      ],
+      "metadata": {
+        "id": "5E_BBMD2IyAY"
       },
       "execution_count": null,
       "outputs": []
